--- a/requirements.txt
+++ b/requirements.txt
@@ -2,23 +2,23 @@
 
 # Base ----------------------------------------
 matplotlib>=3.2.2
-numpy=1.24.4
+numpy==1.24.4
 opencv-python>=4.1.1
 Pillow>=7.1.2
 PyYAML>=5.3.1
 requests>=2.23.0
-scipy=1.13.0
+scipy==1.13.0
 torch>=1.7.0,!=1.12.0
 torchvision>=0.8.1,!=0.13.0
 tqdm>=4.41.0
-protobuf=3.20.3
+protobuf==3.20.3
 
 # Logging -------------------------------------
 tensorboard>=2.4.1
 # wandb
 
 # Plotting ------------------------------------
-pandas=2.2.2
+pandas==2.2.2
 seaborn>=0.11.0
 
 # Export --------------------------------------
@@ -31,7 +31,7 @@ seaborn>=0.11.0
 # openvino-dev  # OpenVINO export
 
 # Extras --------------------------------------
-ipython=7.34.0  # interactive notebook
+ipython==7.34.0  # interactive notebook
 psutil  # system utilization
 thop  # FLOPs computation
 # albumentations>=1.0.3
