reset path for dataset

--- a/data.yaml
+++ b/data.yaml
@@ -1,6 +1,6 @@
-train: d:/Tugas/content/yolov7/train/images
-val: d:/Tugas/content/yolov7/valid/images
-test: d:/Tugas/content/yolov7/test/images
+train: D:/Tugas/dataset/train/images
+val: D:/Tugas/dataset/valid/images
+test: D:/Tugas/dataset/test/images
 
 nc: 1
 names: ["fiber"]
